package org.example.Redes_Sociales;

public class Basico extends Usuario{


    public Basico(String nombre, int edad, String nombreUsuario, int seguidores) {
        super(nombre, edad, nombreUsuario, seguidores);
    }


}
